[gd_scene load_steps=11 format=2]

[ext_resource path="res://World2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/images.png" type="Texture" id=2]
[ext_resource path="res://fundo escritorio.jpg" type="Texture" id=3]
[ext_resource path="res://bank-2-64.png" type="Texture" id=4]
[ext_resource path="res://social.png" type="Texture" id=5]
[ext_resource path="res://book.png" type="Texture" id=6]
[ext_resource path="res://circle-dashed-8-64.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0588235, 0.415686, 0.92549, 1 )

[node name="World2" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 475, 305 )
scale = Vector2( 1.25, 1.20158 )
texture = ExtResource( 3 )

[node name="Bank-2-64" type="Sprite" parent="background"]
position = Vector2( -331.6, -226.369 )
scale = Vector2( 0.65, 0.562089 )
texture = ExtResource( 4 )

[node name="Book" type="Sprite" parent="background"]
position = Vector2( 405.3, -214.868 )
scale = Vector2( 0.496876, 0.498857 )
texture = ExtResource( 6 )

[node name="title" type="Label" parent="."]
margin_left = 411.0
margin_top = 17.0
margin_right = 596.0
margin_bottom = 101.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "O que é a CLT?"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="law_explanation" type="Label" parent="."]
margin_left = 49.0
margin_top = 109.0
margin_right = 1001.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
text = "A Consolidação das Leis do Trabalho, popularmente chamada de CLT, regulamenta as relações trabalhistas, tanto do trabalho urbano quanto do rural, 
de relações individuais ou coletivas. 
Ela foi decretada no Estado Novo – período autoritário da Era Vargas – em 1º de maio de 1943. 
Essa legislação visa a proteger o trabalhador, a regular as relações de trabalho e criar o direito processual do trabalho."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer1_button" type="Button" parent="."]
margin_left = 65.0
margin_top = 472.0
margin_right = 333.0
margin_bottom = 533.0
text = "Criar a consolidação das leis do trabalho"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer2_button" type="Button" parent="."]
margin_left = 361.0
margin_top = 472.0
margin_right = 645.0
margin_bottom = 538.0
text = "Deixar o país sem leis do trabalho"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer3_button" type="Button" parent="."]
margin_left = 670.0
margin_top = 473.0
margin_right = 991.0
margin_bottom = 540.0
text = "Criar uma nova lei relacionada aos trabalhadores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="president_image" type="Sprite" parent="."]
position = Vector2( 511, 301 )
texture = ExtResource( 2 )

[node name="question" type="Label" parent="."]
margin_left = 324.0
margin_top = 438.0
margin_right = 715.0
margin_bottom = 458.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
text = "O que fazer para manter todos os direitos dos trabalhadores?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="economic_indicator" type="Label" parent="."]
margin_left = 42.0
margin_top = 58.0
margin_right = 115.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="social_indicator" type="Label" parent="."]
margin_left = 177.0
margin_top = 55.0
margin_right = 372.0
margin_bottom = 73.0
rect_scale = Vector2( 0.847771, 1.11985 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Social" type="Sprite" parent="."]
position = Vector2( 180.5, 29 )
scale = Vector2( 0.640625, 0.59375 )
texture = ExtResource( 5 )

[node name="Circle-dashed-8-64" type="Sprite" parent="."]
position = Vector2( 967, 44 )
scale = Vector2( 1.28125, 1.17969 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="."]
margin_left = 1007.0
margin_top = 5.0
margin_right = 1031.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="answer1_button" to="." method="_on_answer1_button_pressed"]
[connection signal="pressed" from="answer2_button" to="." method="_on_answer2_button_pressed"]
[connection signal="pressed" from="answer3_button" to="." method="_on_answer3_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
